apps/caplan-elk/fluentd.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: kube-system
  labels:
    app: es-logging
spec:
  template:
    metadata:
      name: fluentd
      labels:
        daemon: fluentd
    spec:
      containers:
      - name: fluentd
        image: fabric8/fluentd-kubernetes:latest
        resources:
          requests:
            memory: 200Mi
            cpu: 100m
          limits:
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
