apps/caplan-elk/es-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-discovery
  labels:
    app: caplan
spec:
  selector:
    app: caplan
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: caplan-es
  labels:
    app: caplan
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: es-port
  selector:
    app: caplan
    role: master

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: caplan-es
  labels:
    app: caplan
    role: master
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: caplan
        role: master
    spec:
      containers:
      - name: es-master
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: quay.io/pires/docker-elasticsearch-kubernetes:5.5.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        - containerPort: 9200
          name: es-port
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
      - name: storage
        hostPath:
          path: /var/caplan-es/data
