apps/caplan-elk/ingress-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: caplan-kibana
spec:
  rules:
  - host: caplan-kibana.cezdata.corp
    http:
      paths:
      - path: /
        backend:
          serviceName: caplan-kibana
          servicePort: 5601
